# robot.rs

./: Cargo.toml
cargo-robot/src/: deploy.rs  logging.rs  main.rs  ssh.rs
ctre/: CTREWrapper.h  Cargo.toml  build.rs
ntcore-rs-macros/src/: lib.rs
ntcore-rs/examples/: poses.rs
ntcore-rs/src/: instance.rs  lib.rs  nt_structs.rs  topic.rs  types.rs
ntcore-rs/tests/: poses.rs
robot-rs/: Cargo.toml  build.rs
robot-rs-build-utils/src/: lib.rs
robot-rs-macros/src/: activities.rs  lib.rs
robot-rs-ntcore-sys/: build.rs
robot-rs-units/src/: base.rs  electrical.rs  force.rs  lib.rs  motion.rs  traits.rs
robot-rs-wpilib-sys/: build.rs
robot-rs-wpilib-sys/src/: calling.rs
robot-rs/examples/: arm.rs  elevator.rs  hello-world.rs  nt-publish.rs
robot-rs/src/: ds.rs  lib.rs  start.rs  time.rs  traits.rs
robot-rs/src/activity/: mod.rs
robot-rs/src/actuators/: mod.rs  pwm.rs
robot-rs/src/input/: hid.rs  xbox.rs
robot-rs/src/physics/: motor.rs
robot-rs/src/sensors/: mod.rs
robot-rs/src/systems/: arm.rs  elevator.rs  mod.rs
robot-rs/src/transforms/: binary.rs  cascade.rs  diff.rs  linear.rs  map.rs  mod.rs  offset.rs  pid.rs  predictive.rs  profile.rs  stability.rs  transform.rs
