[package]
name = "ctre"
version = "0.1.0"
edition = "2021"

[package.metadata.robot_rs]
mavens = { artifactory = "https://maven.ctr-electronics.com/release" }
artifacts = [
    { maven = "artifactory", artifact = "com.ctre.phoenix6:tools:24.2.0", only = ["linuxathena"] },
    { maven = "artifactory", artifact = "com.ctre.phoenix6:wpiapi-cpp:24.2.0", only = ["linuxathena"] },
    #{ maven = "artifactory", artifact = "com.ctre.phoenix6:tools:24.2.0" },
    #{ maven = "artifactory", artifact = "com.ctre.phoenix6:wpiapi-cpp:24.2.0" },
]

[build-dependencies]
bindgen = "0.69.4"
robot-rs-build-utils = { path = "../robot-rs-build-utils" }
